spell checked four_page_summary.tex

--- a/SnowmassStyle/four-page-summary/four_page_summary.tex
+++ b/SnowmassStyle/four-page-summary/four_page_summary.tex
@@ -1,6 +1,6 @@
 Computing has become a major component of all particle physics
 experiments and in many areas of theoretical particle physics.
-The computing frontier initally established seven subgroups
+The computing frontier initially established seven subgroups
 covering user needs and four covering infrastructure.  
 The experimental user needs groups
 covered each of the experimental frontiers: cosmic, energy and intensity.
@@ -11,7 +11,7 @@ a joint report covering both experiment/observation and theory.
 The infrastructure groups examined trends in computing
 to predict how technology will evolve and how it will effect future
 costs and capabilities.
-The four infrastruture groups focussed on distributed computing 
+The four infrastructure groups focused on distributed computing 
 and facility infrastructures; networking;
 software development, personnel,  and training; and
 data management and storage.
@@ -94,7 +94,7 @@ supercomputing centers and summer schools are organized
 by, among others, the Virtual School of Computational
 Science and Engineering (www.vscse.org), but we need to examine whether these
 provide the right training for our field and whether the
-delivery mechanisms are timely.  Using online media, workbooks
+delivery mechanisms are timely.  Using on-line media, workbooks
 and wikis were suggested to enhance training.  Another area of
 common concern is the career path of those who become experts in
 software development.  It is useful to help young scientists learn
@@ -113,7 +113,7 @@ and a ten-fold increase in event complexity.  Effort has begun to
 increase parallelism in reconstruction software and to explore
 the potential of GPUs.  Increased code efficiency could result in
 significant savings.  Also under consideration is saving 
-more raw events to tape and only reconstucting them selectively.
+more raw events to tape and only reconstructing them selectively.
 The LHC produces about 15 PB of raw data per year now, but in 2021
 the rate may rise to 130 PB.  Attention needs to be paid
 to wide-area networking trends to assure that the network does not
@@ -130,7 +130,7 @@ of the energy frontier.  However, we found that
 it would be desirable to better coordinate software development of
 a number of intensity frontier experiments.  There is significant commonality
 in different experiments' needs, and it would be useful to leverage
-the exerience and expertise of the energy frontier experiments
+the experience and expertise of the energy frontier experiments
 to increase the efficiency of the intensity frontier software development.
 
 %%4) The price of storage and bandwidth of of disks may be of
@@ -140,13 +140,13 @@ to increase the efficiency of the intensity frontier software development.
 
 Cosmic frontier experiments will greatly expand their storage needs with the
 development of new instruments.  Current data sets are about 1 PB, and the
-total dataset is expected to about 50 PB in ten years; however, in
+total data set is expected to about 50 PB in ten years; however, in
 10--20 years data will be collected at the rate of 400 PB/yr.
 On the theoretical side, some of the most challenging simulations are
 being run on supercomputers in the areas of astrophysics and cosmology.
 Simulations to compare with observations and simulations to help design
 new instruments will require increasing computing power and play a crucial
-role in interpretaton of experiments.  However,
+role in interpretation of experiments.  However,
 as mentioned above, dealing with new computers architectures
 will be challenging.  Growing archival storage, visualization of
 simulations and allowing public access
@@ -183,13 +183,13 @@ Their needs are currently on the order 100K core-hrs to 1 M core-hrs
 depending on the complexity of the final state and the order to
 which the calculation is done.  They have also been benchmarking
 GPU codes and finding impressive speed up over a single core.  A repository
-of codes has been establised at NERSC and a long term goal is to
+of codes has been established at NERSC and a long term goal is to
 make it easy for experimentalists to use these codes to compute
 standard model rates for the processes they need.
 
-The Distributed Computing and Facilities Infrasturctures
+The Distributed Computing and Facilities Infrastructures
 subgroup looked at the growth trends in the Worldwide LHC
-Computing Grid (WLCG) and the nationsl high performance computing
+Computing Grid (WLCG) and the national high performance computing
 (HPC) centers.  As mentioned above, most of the experimental computing
 is of the HTP type, but it may be useful to do some of that work at
 the HPC centers.  This could save smaller experiments from large
@@ -203,30 +203,30 @@ magnitude in the next ten years.
 
 The Networking subgroup considered the distributed computing
 model in use for large experiments and the implications for
-network research and engagement with the National Reseach and
+network research and engagement with the National Research and
 Education Networks (which carries most of our traffic).
 Ten research questions were posed that should be answered before 2020.
 There are ongoing reviews of networking needs done for ESnet.
 It was also pointed out that expectations of network performance
 need to be raised so that planning for network needs is on par with
 that for computing and storage.  The gap between peak bandwidth and
-delivered bandwith should be narrowed.  It was not felt that wide-area
+delivered bandwidth should be narrowed.  It was not felt that wide-area
 network performance will be an insurmountable bottleneck in the
 next five to ten years as long as investments in higher performance
-links continue.  However, there is uncertaintly as to whether network
+links continue.  However, there is uncertainty as to whether network
 costs will drop at the same rate as they have done recently.
 
 The Software Development, Personnel and Training subgroup has
 made a number of recommendations to implement three main
-goals.  First, use software development stragies and staffing models
+goals.  First, use software development strategies and staffing models
 that result in software more widely useful to the HEP
 community.  Second, to be able to develop and support software
-that will run with optimal efficiency on future computer architechtures.
+that will run with optimal efficiency on future computer architectures.
 Third, to insure that developers and users have the training
 necessary to deal with the increasingly complex software environments
 and computing systems that will be used in the future.
 
-The Storage and Data Managment subgroup found that storage will
+The Storage and Data Management subgroup found that storage will
 continue to be an expensive item for many experiments and that
 rather than satisfy the real requirement for storage, it is
 necessary to manage the cost to optimize the science output
