Edits on 4PS p.1

--- a/SnowmassStyle/four-page-summary/four_page_summary.tex
+++ b/SnowmassStyle/four-page-summary/four_page_summary.tex
@@ -1,21 +1,17 @@
 
-Computing has become a major component of all particle physics experiments and in many areas of theoretical particle physics. The computing frontier initially established seven subgroups covering user needs and four covering infrastructure. The experimental user needs groups covered each of the experimental frontiers: cosmic, energy and intensity. Theoretical subgroups covering accelerator science; astrophysics and cosmology; lattice field theory; and perturbative QCD were formed.  However, astrophysics and cosmology decided to join forces with the cosmic frontier and produced a joint report covering both experiment/observation and theory. The infrastructure groups examined trends in computing to predict how technology will evolve and how it will effect future costs and capabilities. The four infrastructure groups focused on distributed computing and facility infrastructures; networking; software development, personnel,  and training; and data management and storage. Another goal of the infrastructure groups was to identify critical needs that might require the DOE or NSF to fund research in computer technology or computer science needed by particle physicists.
+Computing has become a major component of all particle physics experiments and in many areas of theoretical particle physics. The Computing Frontier study group established subgroups covering user needs and infrastructure. The user needs groups covered the experiments at the energy and intensity frontiers, the combined needs for cosmic frontier experiments, astrophysics and cosmology, and theory subgroups covered accelerator science, astrophysics and cosmology, lattice field theory, and perturbative QCD.  Four infrastructure groups examined trends in computing to predict how technology will evolve and how it will effect future costs and capabilities. These groups focused on distributed computing and facility infrastructures; networking; software development, personnel, and training; data management and storage. These groups looked to identify critical technology needs for particle physics that might require the DOE or NSF to fund research in computer science and technology.
 
-During the period between the Community Planning Meeting at Fermilab and the Community Summer Study at the University of Minnesota, the user groups were actively engaged with other Snowmass groups in order to learn of their plans and estimate their computing needs.  The infrastructure groups were engaged with vendors, computer users and providers and technical experts to try to predict trends in computing, networking, storage, and software development, including considerations of costs, capacities and speeds.  At the University of Minnesota our first day of parallel sessions was devoted to the users presenting their future needs.  The next day the infrastructure groups reported on their findings and reflected on the user needs.
+During the period between the Community Planning Meeting at Fermilab and the Community Summer Study at the University of Minnesota, the Computing Frontier groups were actively engaged with the other  Frontiers to learn of their plans and estimate their computing needs.  The infrastructure groups engaged with vendors, computer users, providers and technical experts to predict trends in computing, networking, storage, and software development, including considerations of costs, capacities and speeds.  At the Minnesota meeting two days of parallel sessions were devoted to discussions across the the subgroups, to finalize subgroup findings, and to identify common trends and needs. A Computing Frontier summary talk was prepared and presented at the plenary session.
 
-It is clear that progress in both experiment and theory will require significantly more computing, software development, storage and networking, with different projects stretching future capabilities in different ways. To move ahead in the most efficient manner will require careful and continuing review of the topics we studied, {\it i.e.}, user needs and capabilities of current and future technology. For many years, the particle physics community has been a great source of computing innovation and expertise.  It is essential to leverage those assets through wider sharing of knowledge throughout the experimental and theoretical communities.  In fact, we should be sharing our expertise with the entire scientific community.
+Progress in HEP experiment and theory will require significantly more computing, software development, storage and networking, with different projects stretching future capabilities in different ways. However, there are many commonalities in the needs between the different areas in HEP, and in the future more commonality and community planning is advised to move ahead in the most efficient manner. This requires careful and continuing review of the topics we studied, {\it i.e.}, user needs and capabilities of current and future technology. For many years, the particle physics community has been a great source of computing innovation and expertise.  It is essential to leverage those assets through wider sharing of knowledge throughout the experimental and theoretical communities.  In fact, we should be sharing our expertise with the entire scientific community.
 
-The experimental program relies for the most part on distributed high-throughput computing (HTP).  The distinction here is that individual events are analyzed and that the analyses are independent of each other.  By distributed, we mean that a groups of events can be assigned to hardware in different locations and results can be combined together when all groups are done.  This is the computing model for ATLAS and CMS, with Tier 0, Tier 1 and Tier 2 centers around the globe.
+The experimental program relies for the most part on distributed high-throughput computing (HTC).  Data analysis, simulation and reconstruction of individual events are independent of each other, and groups of events can be assigned to hardware in different locations. Results are combined together when all event groups are done.  This distributed computing model was pioneered by the energy frontier experiments and is relying on a distributed infrastructure of computing centers as part of Open Science Grid in the U.S. and extending across the globe. The theoretical computing and simulation needs are more commonly addressed by high-performance computing (HPC) in which thousands to hundred thousands of tightly coupled CPUs are working simultaneously on a single problem. These resources are provided mostly through the DOE leadership-class and production class HPC facilities and the NSF XD program. 
 
-The theoretical computing and simulation needs are more commonly considered high-performance computing (HPC) in which thousands to hundreds of thousands of tightly coupled CPUs are working simultaneously on a single problem.
+One issue for those applications that traditionally rely on HTC for their data-intensive computing is to what degree they can or should use national supercomputer centers which have traditionally been designed for HPC usage. Work is proceeding to make these HTC applications run on HPC, and to interface HPC centers to the HTC workload and data management infrastructures. The question of cost effectiveness is being discussed.  At the same time traditional HPC applications develop more data-intensive science needs, which however are currently not a good match to existing and next-generation HPC architectures.  Computational resources will have to address the demands for largely increasing data rates, to address the increased needs for data intensive computing tasks like data analytics, for comparing large samples of simulations and observational data etc. 
 
-One issue for those applications that traditionally rely on HTP computing for their data-intensive computing is to what degree they can or should use national supercomputer centers which have traditionally been designed for HPC usage. There are initiatives to make these applications run on HPC, and to interface HPC centers to the HTC workloads and data management infrastructures. The question of cost effectiveness is being discussed.  
+Another pressing issue faced by both HTC and HPC communities is that power limitations cause processor speeds to no longer increase exponentially, as they were for at least two decades.  Instead, new chips architectures provide multiple cores. Thus we cannot rely on new hardware to run serial codes faster and we must move to parallelizing codes to increase application performance. In addition to multi-core chips there are accelerators such as graphical processing units (GPUs) and many-core chips such as the Intel Xeon Phi. To keep compute resources to scale Moore’s scaling requires full use of many-core architectures. 
 
-At the same time traditional HPC applications develop more data-intensive applications which however are currently not a good match to existing and the next generation HPC architectures. Still, for these applications computational resources will have to grow to match the largely increasing associated data rates, to address the increased needs for data intensive computing, including at HPC centers, for data analytics, combining simulations and observational data etc. 
-
-Another pressing issue is faced by both HTC and HPC communities. It has been clear for the past several years that power limitations cause processor speeds no longer to increase exponentially as they were for at least two decades and thus we cannot rely on new hardware to run our serial codes faster. Instead, new chips architectures provide multiple cores, and we must move to parallelizing codes to increase application performance. In addition to multi-core chips, there are accelerators such a graphical processing units (GPUs) and many-core chips such as the Intel Xeon Phi has about 60 cores. Moore’s scaling requires full use of many-core architectures. 
-
-In the storage area, the price of storage and bandwidth of disks may be of significant concern in the future as prices may not drop as rapidly as in the past and while disks have gotten bigger the interface has not gotten significantly faster.
+In the storage area, the price of storage capacity and throughput may be of significant concern in the future as prices may not drop as rapidly as in the past and while disks have gotten bigger the interface has not gotten significantly faster.
 
 Given the changes in chip technology and evolution of high performance systems, how will we write the parallel codes that will be needed in the future, and how will we train the personnel to develop, support and maintain them? Different subgroups are at different stages in their efforts to port to these new technologies.  Lattice QCD, for example, started its GPU porting efforts in 2008 and has had code in production for some time, particularly for quark inversions; however, there are other parts of the code that are still only running on CPUs.  
 
@@ -37,13 +33,13 @@ Lattice field theory calculations rely on national supercomputer centers and har
 
 Perturbative QCD is essential for theoretical understanding of collider physics rates. The perturbative QCD community took advantage of the Snowmass process to port their codes to NERSC and OLCF, and to run on the Open Science Grid. Their needs are currently on the order 100K core-hrs to 1 M core-hrs depending on the complexity of the final state and the order to which the calculation is done.  They have also been benchmarking GPU codes and finding impressive speed up over a single core.  A repository of codes has been established at NERSC and a long term goal is to make it easy for experimentalists to use these codes to compute standard model rates for the processes they need.
 
-The Distributed Computing and Facilities Infrastructures subgroup looked at the growth trends in distributed resources as provided by the Open Science Grid, and the national high performance computing (HPC) centers.  As mentioned above, most of the experimental computing is of the HTP type, but it may be useful to do some of that work at the HPC centers.  This could save smaller experiments from large investments in hardware and personnel.  Grid computing has become important in a number of areas of science, but HEP is still the biggest user and must continue to be involved with grid computing development.  The HPC computing done in theoretical physics will require an order of magnitude increase in capacity and capability at the HPC centers in the next five years and two orders of magnitude in the next ten years.
+The {\it Distributed Computing and Facilities Infrastructures} subgroup looked at the growth trends in distributed resources as provided by the Open Science Grid, and the national high performance computing (HPC) centers.  As mentioned above, most of the experimental computing is of the HTC type, but it may be useful to do some of that work at the HPC centers.  This could save smaller experiments from large investments in hardware and personnel.  Grid computing has become important in a number of areas of science, but HEP is still the biggest user and must continue to be involved with grid computing development.  The HPC computing done in theoretical physics will require an order of magnitude increase in capacity and capability at the HPC centers in the next five years and two orders of magnitude in the next ten years.
 
-The Networking subgroup considered the distributed computing model in use for large experiments and the implications for network research and engagement with the National Research and Education Networks (which carries most of our traffic). Ten research questions were posed that should be answered before 2020. There are ongoing reviews of networking needs done for ESnet. It was also pointed out that expectations of network performance need to be raised so that planning for network needs is on par with that for computing and storage.  The gap between peak bandwidth and delivered bandwidth should be narrowed.  It was not felt that wide-area network performance will be an insurmountable bottleneck in the next five to ten years as long as investments in higher performance links continue.  However, there is uncertainty as to whether network costs will drop at the same rate as they have done recently.
+The {\it Networking} subgroup considered the distributed computing model in use for large experiments and the implications for network research and engagement with the National Research and Education Networks (which carries most of our traffic). Ten research questions were posed that should be answered before 2020. There are ongoing reviews of networking needs done for ESnet. It was also pointed out that expectations of network performance need to be raised so that planning for network needs is on par with that for computing and storage.  The gap between peak bandwidth and delivered bandwidth should be narrowed.  It was not felt that wide-area network performance will be an insurmountable bottleneck in the next five to ten years as long as investments in higher performance links continue.  However, there is uncertainty as to whether network costs will drop at the same rate as they have done recently.
 
-The Software Development, Personnel and Training subgroup has made a number of recommendations to implement three main goals.  First, use software development strategies and staffing models that result in software more widely useful to the HEP community.  Second, to be able to develop and support software that will run with optimal efficiency on future computer architectures. Third, to insure that developers and users have the training necessary to deal with the increasingly complex software environments and computing systems that will be used in the future.
+The {\it Software Development, Personnel and Training} subgroup has made a number of recommendations to implement three main goals.  First, use software development strategies and staffing models that result in software more widely useful to the HEP community.  Second, to be able to develop and support software that will run with optimal efficiency on future computer architectures. Third, to insure that developers and users have the training necessary to deal with the increasingly complex software environments and computing systems that will be used in the future.
 
-The Storage and Data Management subgroup found that storage will continue to be an expensive item for many experiments and that rather than satisfy the real requirement for storage, it is necessary to manage the cost to optimize the science output from the experiment.  It is possible that tape, which continues to be relatively inexpensive is underutilized.  While new disk technology have been arriving every 18 months, there is now less competition and the technology cycle may increase to three years.  Distribute data management software can be costly for an experiment, and research in the area could benefit a number of experiments.
+The {\it Storage and Data Management} subgroup found that storage will continue to be an expensive item for many experiments and that rather than satisfy the real requirement for storage, it is necessary to manage the cost to optimize the science output from the experiment.  It is possible that tape, which continues to be relatively inexpensive is underutilized.  While new disk technology have been arriving every 18 months, there is now less competition and the technology cycle may increase to three years.  Distribute data management software can be costly for an experiment, and research in the area could benefit a number of experiments.
 
 To summarize, the challenging resource needs for the planned physics programs require efficient and flexible use of all resources. HEP needs both distributed High-Throughput computing and High-Performance Computing. Emerging experiment programs might consider a mix to fulfill demands. Programs to fund these resources need to continue. Sharing and opportunistic use help address resource needs, from all tiers of computing, eventually including commercial providers. There is increasing need for data intensive computing in traditionally computation-intensive fields, including at HPC, for data analytics, combining simulations and observational data etc. 
 
